variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: Missing closing brace `}' assumed here
var Nb : Int = 0
^RunFour:4: error: ';' expected but 'else' found.
else (estSurBiscuit()) {
^